deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-logistics-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-logistics-api
  template:
    metadata:
      labels:
        app: ai-logistics-api
    spec:
      containers:
      - name: ai-logistics-api
        image: asia-south1-docker.pkg.dev/ai-logistics-platform/ai-repo/ai-logistics-api
        ports:
        - containerPort: 8080
